# msgpack.spec

./: .appveyor.yml  .dockerignore  .gitignore  .travis.yml  Dockerfile  Dockerfile.benchmark  LICENSE  README.md  azure-pipelines.yml  msgpack.spec.sln
.azure/: install.yml  test.yml  tests.yml
benchmarks/msgpack.spec.linux/: MsgPackSpecPointer.cs  NativeComparison.cs  Program.cs  msgpack.spec.linux.csproj
benchmarks/msgpack.spec.linux/c/: CMakeLists.txt  cMsgPack.c  cppMsgPack.cpp
scripts/: .travis.sdk1.txt  .travis.sdk2.txt  set-version.ps1
src/msgpack.light.binary/: DataCodes.cs  MsgPackBinary.Array.cs  MsgPackBinary.Binary.cs  MsgPackBinary.Boolean.cs  MsgPackBinary.Double.cs  MsgPackBinary.Extension.cs  MsgPackBinary.Float.cs  MsgPackBinary.Int16.cs  MsgPackBinary.Int32.cs  MsgPackBinary.Int64.cs  MsgPackBinary.Int8.cs  MsgPackBinary.Map.cs  MsgPackBinary.NegativeFixInt.cs  MsgPackBinary.Nil.cs  MsgPackBinary.PositiveFixInt.cs  MsgPackBinary.String.cs  MsgPackBinary.UInt16.cs  MsgPackBinary.UInt32.cs  MsgPackBinary.UInt64.cs  MsgPackBinary.UInt8.cs  MsgPackBinary.Write.Int16.cs  MsgPackBinary.Write.Int32.cs  MsgPackBinary.Write.Int8.cs  MsgPackBinary.Write.NegativeFixInt.cs  MsgPackBinary.Write.PositiveFixInt.cs  MsgPackBinary.Write.UInt16.cs  MsgPackBinary.Write.UInt32.cs  MsgPackBinary.Write.UInt64.cs  MsgPackBinary.Write.UInt8.cs  MsgPackBinary.cs  msgpack.light.binary.csproj
src/msgpack.spec/: DataCodes.cs  DataFamily.cs  DataLengths.cs  ExtensionTypes.cs  FixedMemoryArrayPool.cs  MsgPackSpec.Array.ReadOnlySequence.cs  MsgPackSpec.Array.cs  (+46 more)
(+74 files in other folders)
